Kubernetes2/c_map.yml

apiVersion: v1
kind: Pod
metadata:
  name: configmap-demo-pod
spec:
  containers:
    - name: demo
      image: alpine
      command: ["sleep", "3600"]
      volumeMounts:
      - name: config
        mountPath: "/config"
        readOnly: true
  volumes:
  # You set volumes at the Pod level, then mount them into containers inside that Pod
  - name: config
    configMap:
      # Provide the name of the ConfigMap you want to mount.
      name: game-demo
      # An array of keys from the ConfigMap to create as files
      items:
      - key: "game.properties"
        path: "game.properties"
      - key: "user-interface.properties"
        path: "user-interface.properties"
        
---
apiVersion: v1
kind: Pod
metadata:
 name: kuard-config
spec:
 containers:
  - name: test-container
    image: gcr.io/kuar-demo/kuard-amd64:blue
    imagePullPolicy: Always
    command:
      - "/kuard"
      - "$(EXTRA_PARAM)"
    volumeMounts:
      - name: config-volume
        mountPath: /config
 volumes:
  - name: config-volume
    configMap:
      name: my-config
 restartPolicy: Never
