Kubernetes2/kube-svc.yml
apiVersion: v1
kind: Pod
metadata:
  name: vproapp
  labels:
    app: vproapp
spec:
  containers:
  - name: appcontainer
    image: imranvisualpath/freshtomapp:V7
    ports:
      - name: http-web-svc
        containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: vproapp-svc
spec:
  selector:
    app: vproapp
  ports:
  - port: 8090
    protocol: TCP
    nodePort: 30001
    targetPort: http-web-svc
  type: NodePort
